amélioration du systeme de session Déconnexion et gestion des erreurs de connexion

--- a/Composants/headerlogged.html
+++ b/Composants/headerlogged.html
@@ -13,7 +13,7 @@
             <div class="topnav">
                 <a href="#">Lien du haut</a>
                 <a href="#">Lien du haut</a>
-                <a href="#" style="float:right">Lien du haut</a>
+                <a href="deconnect.php" style="float:right">Déconnexion</a>
             </div>
         </header>
         <main>
